--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@nrwl/cypress": "^15.6.3",
     "@nrwl/eslint-plugin-nx": "15.6.3",
+    "@nrwl/jest": "^15.6.3",
     "@nrwl/linter": "15.6.3",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "15.6.3",
@@ -14,6 +15,7 @@
     "@nrwl/workspace": "15.6.3",
     "@nx-go/nx-go": "^2.7.0",
     "@testing-library/react": "13.4.0",
+    "@types/jest": "28.1.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
@@ -31,11 +33,15 @@
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
+    "jest": "28.1.1",
+    "jest-environment-jsdom": "28.1.1",
     "jsdom": "~20.0.3",
     "nx": "15.6.3",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
     "sass": "^1.55.0",
+    "ts-jest": "28.0.5",
+    "ts-node": "10.9.1",
     "typescript": "~4.8.2",
     "vite": "^4.0.1",
     "vite-plugin-eslint": "^1.8.1",
@@ -45,6 +51,7 @@
   "dependencies": {
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.4.3"
+    "react-router-dom": "6.4.3",
+    "tslib": "^2.3.0"
   }
 }
