--- a/package.json
+++ b/package.json
@@ -49,8 +49,10 @@
     "vitest": "^0.25.8"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "6.4.3",
     "tslib": "^2.3.0"
   }
