--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nx-go/nx-go": "^2.7.0",
     "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
+    "@types/luxon": "^3.2.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
@@ -50,6 +51,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
+    "luxon": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
